--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,14 @@ button {
   #switch_container {
     display: flex;
     flex-direction: row;
-    font-size: 3rem;
+    height: auto;
     gap:2px;
     align-items: center;
+  }
+
+  #pickXorY{
+    font-size: 2rem;
+  }
+ .symbol {
+    font-size: 6rem;
   }
