--- a/styles.css
+++ b/styles.css
@@ -41,10 +41,12 @@ body {
 }
 
 button {
-    width: 20rem;
+    width: 18rem;
     height: 3rem;
     justify-self: center;
     font-size: 2.5rem;
+    border-radius: 15px;
+    border: 1px solid grey;
 }
 
 .switch {
@@ -101,7 +103,7 @@ button {
   #switch_container {
     display: flex;
     flex-direction: row;
-    height: auto;
+    height: 2rem;
     gap:2px;
     align-items: center;
   }
