--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 #result {
-    font-size: 30px;
+    font-size: 46px;
     margin-top: 1rem;
     height: 2rem;
     text-align: center;
@@ -18,7 +18,7 @@ body {
     width: fit-content;
     margin: 2rem;
 
-
+    color: rgb(80,80,80);
     display: grid;
     grid-template-columns: 100px 100px 100px;
     grid-template-rows: 100px 100px 100px;
@@ -27,7 +27,7 @@ body {
     align-items: center;
     justify-items: center;
     font-size: 7em;
-    background: black;
+    background: rgb(150,150,150);
 }
 
 .cell {
@@ -66,6 +66,10 @@ body {
 }
 */
 
+.winning {
+  color: red;
+}
+
 button {
     width: 18rem;
     height: 3rem;
@@ -73,6 +77,14 @@ button {
     font-size: 2.5rem;
     border-radius: 15px;
     border: 1px solid grey;
+    margin-bottom: 1rem;
+    box-shadow: 0 5px #666;
+}
+
+button:active {
+
+  box-shadow: 0 1px #666;
+  transform: translateY(4px);
 }
 
 .switch {
@@ -80,12 +92,14 @@ button {
     display: inline-block;
     width: 60px;
     height: 34px;
+   
   }
   
   .switch input { 
     opacity: 0;
     width: 0;
     height: 0;
+    
   }
   
   .slider {
@@ -96,8 +110,9 @@ button {
     right: 0;
     bottom: 0;
     background-color: #2196F3;
-    -webkit-transition: .4s;
+    -webkit-transition: .1s;
     transition: .4s;
+    border-radius: 1rem;
   }
   
   .slider:before {
@@ -108,12 +123,13 @@ button {
     left: 4px;
     bottom: 4px;
     background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
+    -webkit-transition: .1s;
+    transition: .1s;
+    border-radius: 50%;
   }
   
   input:checked + .slider {
-    background-color: #F33633;
+    background-color: #03c233;
   }
   
   input:focus + .slider {
@@ -127,6 +143,7 @@ button {
   }
 
   #switch_container {
+    color: rgb(80,80,80);
     display: flex;
     flex-direction: row;
     height: 2rem;
